agentgateway/agw-jwt-auth/jwt-scope-access-control/09-gemini-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-gemini-route
  namespace: agentgateway-system
spec:
  hostnames:
  - demo-gemini.example.com
  parentRefs:
  - name: https
  rules:
  - backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: gemini-llm
